web-services-metadata/2.1/_index.md
---
title: "Jakarta Web Services Metadata Specification 2.1"
date: 2019-07-23T14:28:20+0200
summary: "Initial release of Jakarta Web Services Metadata"
---
Jakarta Web Services Metadata defines a programming model for Web Services in Java,
use of metadata, a non-normative processing model for metadata annotated web service
source files, runtime requirements for a container, and annotations used for WSDL,
binding, and configuration.

This specification is a re-release of [JSR 181](http://jcp.org/en/jsr/detail?id=181) under the [EFSL](https://www.eclipse.org/legal/efsl/).

* [Jakarta Web Services Metadata 2.1 Specification Document](./ws-metadata-spec-2.1.pdf) (PDF)
* [Jakarta Web Services Metadata 2.1 Specification Document](./ws-metadata-spec-2.1.html) (HTML)
* [Jakarta Web Services Metadata 2.1 Javadoc](./apidocs/index.html?overview-summary.html)
* [Jakarta Web Services Metadata 2.1 TCK](http://download.eclipse.org/ee4j/xml-web-services/tck/eftl/jakarta-xml-ws-tck-2.3.0.zip)
  * For all TCK releases, see [download directory](https://download.eclipse.org/jakartaee/xml-web-services/2.3/)
* Maven coordinates
  * [jakarta.jws:jakarta.jws-api:jar:2.1.0](https://central.sonatype.com/artifact/jakarta.jws/jakarta.jws-api/2.1.0/jar)

# Ballots

## Release Review

The Release Review Specification Committee Ballot concluded successfully on 2020-02-19 with the following results.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura, Michael DeNicola               | Fujitsu             |   1  |
| Dan Bandera, Kevin Sutter                      | IBM                 |   1  |
| Bill Shannon, Ed Bratt                         | Oracle              |   1  |
| Mark Wareham, Steve Millidge                   | Payara              |   1  |
| Scott Stark, Mark Little                       | Red Hat             |   1  |
| David Blevins, Cesar Hernandez                 | Tomitribe           |   1  |
| Ivar Grimstad                                  | EE4J PMC            |   1  |
| Alex Theedom                                   | Participant Members |      |
| Werner Keil                                    | Committer Members   |   1  |
|                                                | Total               |   8  |

# Compatible Implementations

* [Eclipse Metro 2.4.3](https://eclipse-ee4j.github.io/metro-wsit/)
